--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -10,9 +10,9 @@ pkgbase=linux-c201
 _srcname=linux-4.20
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
-pkgver=4.20.11
+pkgver=4.20.15
 pkgrel=1
-rcnrel=armv7-x7
+rcnrel=armv7-x10
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
@@ -36,6 +36,10 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
 	'0024-drm-rockchip-vop-Support-dithering-to-RGB666.patch'
 	'0025-drm-rockchip-vop-implement-gamma-lut.patch'
 	'0027-DTS-rk3288-fixup-GPU-for-ARM-mali_kbase.patch'
+	'0040-Added-a-second-reset-when-having-an-issue-reading-th.patch'
+	'0041-block-partitions-efi-Ignore-bizarre-Chromebook-GPT-p.patch'
+	'0042-mmc-Added-a-flag-to-disable-cache-flush-during-reset.patch'
+	'0043-arm-dts-veyron-Added-a-flag-to-disable-cache-flush-d.patch'
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
@@ -71,6 +75,12 @@ prepare() {
   GIT_DIR=/tmp git apply ../0024-drm-rockchip-vop-Support-dithering-to-RGB666.patch
   GIT_DIR=/tmp git apply ../0025-drm-rockchip-vop-implement-gamma-lut.patch
   GIT_DIR=/tmp git apply ../0027-DTS-rk3288-fixup-GPU-for-ARM-mali_kbase.patch
+
+  # eMMC patches (SolidHal & RockMyy)
+  GIT_DIR=/tmp git apply ../0040-Added-a-second-reset-when-having-an-issue-reading-th.patch
+  GIT_DIR=/tmp git apply ../0041-block-partitions-efi-Ignore-bizarre-Chromebook-GPT-p.patch
+  GIT_DIR=/tmp git apply ../0042-mmc-Added-a-flag-to-disable-cache-flush-during-reset.patch
+  GIT_DIR=/tmp git apply ../0043-arm-dts-veyron-Added-a-flag-to-disable-cache-flush-d.patch
 
   cat "${srcdir}/config" > ./.config
 
@@ -316,8 +326,8 @@ for _p in ${pkgname[@]}; do
 done
 
 md5sums=('d39dd4ba2d5861c54b90d49be19eaf31'
-         'a54c60bf1a5f5682da13c86985c40336'
-         '12c064d84977ce090c4712afbfde3edd'
+         '591cac6d62c0aeedc47d98069c5aa38b'
+         'a156b1fd6fcac708c716298e1375eba2'
          'a9f76b75f18f89d535bbbe357c08f70e'
          '40708505c237608fbc3923a714f8ffcb'
          '339f1a7d7242c8639f33f6acd370f761'
@@ -333,6 +343,10 @@ md5sums=('d39dd4ba2d5861c54b90d49be19eaf31'
          '91c3874ae552d0107079ab8f41753cf8'
          'e5b81b7e1b69d69e0bd494c3693e07f0'
          '3e0dbac717ddbbe13d89f40c43aec6d4'
+         '97c6346956f46fa70392ed2d1cdd02bb'
+         'bf3fae081eead39417518f973f1bb416'
+         '4d6d30026d430074007e222f1636d3ab'
+         '2bbff5231577a3110f0c9e9fda86f351'
          '9751afcc5d59bf5d34561efbe7fc1fec'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
