--- a/linux-test/PKGBUILD
+++ b/linux-test/PKGBUILD
@@ -6,24 +6,26 @@
 
 buildarch=4
 
-pkgbase=linux-c201-test
+# This is the "extension" to the base linux-c201 name -- used in zImage 
+# dtb paths too
+_xname=-test
+
+pkgbase=linux-c201${_xname}
 _srcname=linux
 _kernelname=${pkgbase#linux}
-_desc="ARMv7 multi-platform"
-pkgver=5.1.rc3.r22.gd0536786d215
+_desc="Veyron Speedy"
+pkgver=5.1.rc3.r23.g01a8c7b421d2
 pkgrel=1
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("linux::git+https://github.com/urjaman/linux.git#branch=c201_5_1_rc3_pf3"
+source=("linux::git+https://github.com/urjaman/linux.git#branch=c201_5_1_rc3_pf4"
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
-        'linux.preset'
         '60-linux.hook'
-        '90-linux.hook'
         'config')
 
 pkgver() {
@@ -35,6 +37,9 @@ prepare() {
   cd "${srcdir}/${_srcname}"
   
   cat "${srcdir}/config" > ./.config
+
+  # set extraversion to ${_xname}-${pkgrel}
+  sed -ri "s|^(EXTRAVERSION =)(.*)|\1 ${_xname}-${pkgrel}|" Makefile
 
   # don't run depmod on 'make install'. We'll do this ourselves in packaging
   sed -i '2iexit 0' scripts/depmod.sh
@@ -75,11 +80,7 @@ _package() {
   pkgdesc="The Linux Kernel and modules - ${_desc}"
   depends=('coreutils' 'linux-firmware' 'kmod' 'mkinitcpio>=0.7')
   optdepends=('crda: to set the correct wireless channels of your country')
-  backup=("etc/mkinitcpio.d/${pkgbase}.preset")
   provides=('kernel26' "linux=${pkgver}")
-  conflicts=('linux-c201')
-  replaces=('linux-mvebu' 'linux-udoo' 'linux-sun4i' 'linux-sun5i' 'linux-sun7i' 'linux-usbarmory' 'linux-wandboard' 'linux-clearfog')
-  install=${pkgname}.install
 
   cd "${srcdir}/${_srcname}"
 
@@ -92,8 +93,8 @@ _package() {
 
   mkdir -p "${pkgdir}"/{boot,usr/lib/modules}
   make INSTALL_MOD_PATH="${pkgdir}/usr" modules_install
-  make INSTALL_DTBS_PATH="${pkgdir}/boot/dtbs-test" dtbs_install
-  cp arch/$KARCH/boot/zImage "${pkgdir}/boot/zImage-test"
+  make INSTALL_DTBS_PATH="${pkgdir}/boot/dtbs${_xname}" dtbs_install
+  cp arch/$KARCH/boot/zImage "${pkgdir}/boot/zImage${_xname}"
 
   # make room for external modules
   local _extramodules="extramodules-${_basekernel}${_kernelname}"
@@ -116,22 +117,15 @@ _package() {
     s|%EXTRAMODULES%|${_extramodules}|g
   "
 
-  # install mkinitcpio preset file
-  sed "${_subst}" ../linux.preset |
-    install -Dm644 /dev/stdin "${pkgdir}/etc/mkinitcpio.d/${pkgbase}.preset"
-
   # install pacman hooks
   sed "${_subst}" ../60-linux.hook |
     install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/60-${pkgbase}.hook"
-  sed "${_subst}" ../90-linux.hook |
-    install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/90-${pkgbase}.hook"
 }
 
 _package-chromebook() {
   pkgdesc="The Linux Kernel - ${_desc} - Chromebooks"
-  depends=('linux-c201-test')
-  conflicts=('linux-c201-chromebook')
-  install=${pkgname}.install
+  depends=("linux-c201${xname}")
+  install=chromebook.install
 
   cd "${srcdir}/${_srcname}"
 
@@ -164,7 +158,5 @@ md5sums=('SKIP'
          '9751afcc5d59bf5d34561efbe7fc1fec'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
-         '86d4a35722b5410e3b29fc92dae15d4b'
          'ce6c81ad1ad1f8b333fd6077d47abdaf'
-         '3e2a512f8da5db5fe9f17875405e56a3'
          'SKIP')
