--- a/linux-test/config
+++ b/linux-test/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.1.0-rc3 Kernel Configuration
+# Linux/arm 5.1.0-test-1 Kernel Configuration
 #
 
 #
