--- a/linux-test/PKGBUILD
+++ b/linux-test/PKGBUILD
@@ -14,14 +14,14 @@ pkgbase=linux-c201${_xname}
 _srcname=linux
 _kernelname=${pkgbase#linux}
 _desc="Veyron Speedy"
-pkgver=5.1.rc3.r23.g01a8c7b421d2
+pkgver=5.1.rc4.r24.ga48690f00c70
 pkgrel=1
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("linux::git+https://github.com/urjaman/linux.git#branch=c201_5_1_rc3_pf4"
+source=("linux::git+https://github.com/urjaman/linux.git#branch=c201_5_1_rc4_f1"
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
