--- a/linux-test/PKGBUILD
+++ b/linux-test/PKGBUILD
@@ -14,14 +14,14 @@ pkgbase=linux-c201${_xname}
 _srcname=linux
 _kernelname=${pkgbase#linux}
 _desc="Veyron Speedy"
-pkgver=5.1.rc5.r24.ga2021c05299d
-pkgrel=1
+pkgver=5.1.1.r33.gfc8b516507cd
+pkgrel=2
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("linux::git+https://github.com/urjaman/linux.git#branch=c201_5_1_rc5_pf1"
+source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.1.1"
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
