test kernel to 5.1.6
it's the same as the current linux-c201, but just to test & keep
it at atleast the same as the main kernel :)
(i'll move it to 5.2 when i have the energy to do that...)

--- a/linux-test/PKGBUILD
+++ b/linux-test/PKGBUILD
@@ -14,14 +14,14 @@ pkgbase=linux-c201${_xname}
 _srcname=linux
 _kernelname=${pkgbase#linux}
 _desc="Veyron Speedy"
-pkgver=5.1.1.r33.gfc8b516507cd
-pkgrel=2
+pkgver=5.1.6.r36.g6b248796e834
+pkgrel=1
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.1.1"
+source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.1.6"
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
