--- a/linux-test/PKGBUILD
+++ b/linux-test/PKGBUILD
@@ -14,14 +14,14 @@ pkgbase=linux-c201${_xname}
 _srcname=linux
 _kernelname=${pkgbase#linux}
 _desc="Veyron Speedy"
-pkgver=5.2.rc3.r14.g6973f948b4f2
+pkgver=5.2.8.r14.g9cbe87909134
 pkgrel=1
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.2-rc3"
+source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.2.8"
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
