Update linux-test to 5.4-rc5

--- a/linux-test/PKGBUILD
+++ b/linux-test/PKGBUILD
@@ -14,14 +14,14 @@ pkgbase=linux-c201${_xname}
 _srcname=linux
 _kernelname=${pkgbase#linux}
 _desc="Veyron Speedy"
-pkgver=5.4.rc4.r17.g42a9c7693dfc
+pkgver=5.4.rc5.r18.g1311be5c452d
 pkgrel=1
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.4-rc4_v1"
+source=("linux::git+https://github.com/urjaman/linux.git#branch=c201-5.4-rc5_v1"
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
@@ -54,10 +54,10 @@ build() {
 
   # load configuration
   # Configure the kernel. Replace the line below with one of your choice.
-  make menuconfig # CLI menu for configuration
+  #make menuconfig # CLI menu for configuration
   #make nconfig # new CLI menu for configuration
   #make xconfig # X-based configuration
-  #make oldconfig # using old config from previous kernel version
+  make oldconfig # using old config from previous kernel version
   # ... or manually edit .config
 
   # Copy back our configuration (use with new kernel version)
